--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,8 +50,8 @@ a.btn {
   padding: 8px 16px;
   font-weight: bold;
 }
-.btn .fa,
-a.btn .fa {
+.btn .fa,.fab
+a.btn .fa .fab{
   margin-right: 5px;
 }
 .btn:focus,
